cdk-windowgeniusai/cdk.out/CdkWindowgeniusaiStack.template.json
{
 "Resources": {
  "WindowGeniusVPC5C5D1F59": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/Resource"
   }
  },
  "WindowGeniusVPCPublicSubnet1SubnetA800584E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "WindowGeniusVPC5C5D1F59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet1/Subnet"
   }
  },
  "WindowGeniusVPCPublicSubnet1RouteTable25E3677C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "WindowGeniusVPC5C5D1F59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet1/RouteTable"
   }
  },
  "WindowGeniusVPCPublicSubnet1RouteTableAssociation6EC4CE1E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "WindowGeniusVPCPublicSubnet1RouteTable25E3677C"
    },
    "SubnetId": {
     "Ref": "WindowGeniusVPCPublicSubnet1SubnetA800584E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "WindowGeniusVPCPublicSubnet1DefaultRouteDF28DCBB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "WindowGeniusVPCIGW4AAD4368"
    },
    "RouteTableId": {
     "Ref": "WindowGeniusVPCPublicSubnet1RouteTable25E3677C"
    }
   },
   "DependsOn": [
    "WindowGeniusVPCVPCGW73E9A5A9"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet1/DefaultRoute"
   }
  },
  "WindowGeniusVPCPublicSubnet1EIP37C2A619": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet1/EIP"
   }
  },
  "WindowGeniusVPCPublicSubnet1NATGateway504898EF": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "WindowGeniusVPCPublicSubnet1EIP37C2A619",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "WindowGeniusVPCPublicSubnet1SubnetA800584E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "WindowGeniusVPCPublicSubnet1DefaultRouteDF28DCBB",
    "WindowGeniusVPCPublicSubnet1RouteTableAssociation6EC4CE1E"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet1/NATGateway"
   }
  },
  "WindowGeniusVPCPublicSubnet2Subnet5B9A29DF": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "WindowGeniusVPC5C5D1F59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet2/Subnet"
   }
  },
  "WindowGeniusVPCPublicSubnet2RouteTable05FFEBB0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "WindowGeniusVPC5C5D1F59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet2/RouteTable"
   }
  },
  "WindowGeniusVPCPublicSubnet2RouteTableAssociation949846D6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "WindowGeniusVPCPublicSubnet2RouteTable05FFEBB0"
    },
    "SubnetId": {
     "Ref": "WindowGeniusVPCPublicSubnet2Subnet5B9A29DF"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "WindowGeniusVPCPublicSubnet2DefaultRouteF4FD1828": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "WindowGeniusVPCIGW4AAD4368"
    },
    "RouteTableId": {
     "Ref": "WindowGeniusVPCPublicSubnet2RouteTable05FFEBB0"
    }
   },
   "DependsOn": [
    "WindowGeniusVPCVPCGW73E9A5A9"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet2/DefaultRoute"
   }
  },
  "WindowGeniusVPCPublicSubnet2EIP8DFFC482": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet2/EIP"
   }
  },
  "WindowGeniusVPCPublicSubnet2NATGatewayF467D655": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "WindowGeniusVPCPublicSubnet2EIP8DFFC482",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "WindowGeniusVPCPublicSubnet2Subnet5B9A29DF"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "WindowGeniusVPCPublicSubnet2DefaultRouteF4FD1828",
    "WindowGeniusVPCPublicSubnet2RouteTableAssociation949846D6"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PublicSubnet2/NATGateway"
   }
  },
  "WindowGeniusVPCPrivateSubnet1SubnetCF65129A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "WindowGeniusVPC5C5D1F59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PrivateSubnet1/Subnet"
   }
  },
  "WindowGeniusVPCPrivateSubnet1RouteTable8B24B3E8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "WindowGeniusVPC5C5D1F59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PrivateSubnet1/RouteTable"
   }
  },
  "WindowGeniusVPCPrivateSubnet1RouteTableAssociationFBA57D64": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "WindowGeniusVPCPrivateSubnet1RouteTable8B24B3E8"
    },
    "SubnetId": {
     "Ref": "WindowGeniusVPCPrivateSubnet1SubnetCF65129A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "WindowGeniusVPCPrivateSubnet1DefaultRoute16CC8478": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "WindowGeniusVPCPublicSubnet1NATGateway504898EF"
    },
    "RouteTableId": {
     "Ref": "WindowGeniusVPCPrivateSubnet1RouteTable8B24B3E8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PrivateSubnet1/DefaultRoute"
   }
  },
  "WindowGeniusVPCPrivateSubnet2Subnet900C2475": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "WindowGeniusVPC5C5D1F59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PrivateSubnet2/Subnet"
   }
  },
  "WindowGeniusVPCPrivateSubnet2RouteTable5D05300C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "WindowGeniusVPC5C5D1F59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PrivateSubnet2/RouteTable"
   }
  },
  "WindowGeniusVPCPrivateSubnet2RouteTableAssociation49BF861D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "WindowGeniusVPCPrivateSubnet2RouteTable5D05300C"
    },
    "SubnetId": {
     "Ref": "WindowGeniusVPCPrivateSubnet2Subnet900C2475"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "WindowGeniusVPCPrivateSubnet2DefaultRoute8EE0C7C9": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "WindowGeniusVPCPublicSubnet2NATGatewayF467D655"
    },
    "RouteTableId": {
     "Ref": "WindowGeniusVPCPrivateSubnet2RouteTable5D05300C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/PrivateSubnet2/DefaultRoute"
   }
  },
  "WindowGeniusVPCIGW4AAD4368": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "CdkWindowgeniusaiStack/WindowGeniusVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/IGW"
   }
  },
  "WindowGeniusVPCVPCGW73E9A5A9": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "WindowGeniusVPCIGW4AAD4368"
    },
    "VpcId": {
     "Ref": "WindowGeniusVPC5C5D1F59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusVPC/VPCGW"
   }
  },
  "WindowGeniusCluster131ED853": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusCluster/Resource"
   }
  },
  "WindowGeniusTaskRoleE5811045": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/SecretsManagerReadWrite"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusTaskRole/Resource"
   }
  },
  "WindowGeniusLogGroupAE032AE7": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "RetentionInDays": 731
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusLogGroup/Resource"
   }
  },
  "WindowGeniusDBSubnetGroupE36DA07E": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for WindowGeniusDB database",
    "SubnetIds": [
     {
      "Ref": "WindowGeniusVPCPrivateSubnet1SubnetCF65129A"
     },
     {
      "Ref": "WindowGeniusVPCPrivateSubnet2Subnet900C2475"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusDB/SubnetGroup/Default"
   }
  },
  "WindowGeniusDBSecurityGroupCA8DE3A4": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for WindowGeniusDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "WindowGeniusVPC5C5D1F59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusDB/SecurityGroup/Resource"
   }
  },
  "CdkWindowgeniusaiStackWindowGeniusDBSecret32771F4C3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"dbmaster\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusDB/Secret/Resource"
   }
  },
  "WindowGeniusDBSecretAttachment47BEB566": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "CdkWindowgeniusaiStackWindowGeniusDBSecret32771F4C3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "WindowGeniusDB44D8D7BD"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusDB/Secret/Attachment/Resource"
   }
  },
  "WindowGeniusDB44D8D7BD": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBName": "windowgeniusdb",
    "DBSubnetGroupName": {
     "Ref": "WindowGeniusDBSubnetGroupE36DA07E"
    },
    "DeletionProtection": false,
    "Engine": "postgres",
    "EngineVersion": "13",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "CdkWindowgeniusaiStackWindowGeniusDBSecret32771F4C3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "dbmaster",
    "MaxAllocatedStorage": 100,
    "MultiAZ": false,
    "PubliclyAccessible": true,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "WindowGeniusDBSecurityGroupCA8DE3A4",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Snapshot",
   "DeletionPolicy": "Snapshot",
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusDB/Resource"
   }
  },
  "WindowGeniusServiceLBA50F66F8": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "WindowGeniusServiceLBSecurityGroupE8EF7DCE",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "WindowGeniusVPCPublicSubnet1SubnetA800584E"
     },
     {
      "Ref": "WindowGeniusVPCPublicSubnet2Subnet5B9A29DF"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "WindowGeniusVPCPublicSubnet1DefaultRouteDF28DCBB",
    "WindowGeniusVPCPublicSubnet1RouteTableAssociation6EC4CE1E",
    "WindowGeniusVPCPublicSubnet2DefaultRouteF4FD1828",
    "WindowGeniusVPCPublicSubnet2RouteTableAssociation949846D6"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusService/LB/Resource"
   }
  },
  "WindowGeniusServiceLBSecurityGroupE8EF7DCE": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB CdkWindowgeniusaiStackWindowGeniusServiceLB83347785",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "WindowGeniusVPC5C5D1F59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusService/LB/SecurityGroup/Resource"
   }
  },
  "WindowGeniusServiceLBSecurityGrouptoCdkWindowgeniusaiStackWindowGeniusServiceSecurityGroupE4BD3A7C8000E395E489": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "WindowGeniusServiceSecurityGroupA17A5F22",
      "GroupId"
     ]
    },
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "WindowGeniusServiceLBSecurityGroupE8EF7DCE",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 8000
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusService/LB/SecurityGroup/to CdkWindowgeniusaiStackWindowGeniusServiceSecurityGroupE4BD3A7C:8000"
   }
  },
  "WindowGeniusServiceLBPublicListenerF1C122F7": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "WindowGeniusServiceLBPublicListenerECSGroupBD615C78"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "WindowGeniusServiceLBA50F66F8"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusService/LB/PublicListener/Resource"
   }
  },
  "WindowGeniusServiceLBPublicListenerECSGroupBD615C78": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "WindowGeniusVPC5C5D1F59"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "WindowGeniusServiceTaskDefC3884F53": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "PORT",
        "Value": "8000"
       }
      ],
      "Essential": true,
      "Image": "629965575535.dkr.ecr.us-east-1.amazonaws.com/windowgeniusai:latest",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "WindowGeniusLogGroupAE032AE7"
        },
        "awslogs-stream-prefix": "windowgeniusai",
        "awslogs-region": "us-east-1"
       }
      },
      "Name": "windowgeniusai",
      "PortMappings": [
       {
        "ContainerPort": 8000,
        "Protocol": "tcp"
       }
      ],
      "Secrets": [
       {
        "Name": "DATABASE_URL",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:DATABASE_URL::"
       },
       {
        "Name": "DATABASE_NAME",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:dbname::"
       },
       {
        "Name": "DATABASE_USER",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:username::"
       },
       {
        "Name": "DATABASE_PASSWORD",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:password::"
       },
       {
        "Name": "DATABASE_HOST",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:host::"
       },
       {
        "Name": "DATABASE_PORT",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:port::"
       },
       {
        "Name": "SECRET_KEY",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:SECRET_KEY::"
       },
       {
        "Name": "DEBUG",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:DEBUG::"
       },
       {
        "Name": "OPENAI_API_KEY",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:OPENAI_API_KEY::"
       },
       {
        "Name": "EMAIL_HOST_USER",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:EMAIL_HOST_USER::"
       },
       {
        "Name": "EMAIL_HOST_PASSWORD",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:EMAIL_HOST_PASSWORD::"
       },
       {
        "Name": "DEFAULT_FROM_EMAIL",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:DEFAULT_FROM_EMAIL::"
       },
       {
        "Name": "SALES_EMAIL",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:SALES_EMAIL::"
       },
       {
        "Name": "CLOUDINARY_CLOUD_NAME",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:CLOUDINARY_CLOUD_NAME::"
       },
       {
        "Name": "CLOUDINARY_API_KEY",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:CLOUDINARY_API_KEY::"
       },
       {
        "Name": "CLOUDINARY_API_SECRET",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:CLOUDINARY_API_SECRET::"
       },
       {
        "Name": "FB_PAGE_ACCESS_TOKEN",
        "ValueFrom": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM:FB_PAGE_ACCESS_TOKEN::"
       }
      ]
     }
    ],
    "Cpu": "512",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "WindowGeniusServiceTaskDefExecutionRole1589B117",
      "Arn"
     ]
    },
    "Family": "CdkWindowgeniusaiStackWindowGeniusServiceTaskDef8CD1A48D",
    "Memory": "1024",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "WindowGeniusTaskRoleE5811045",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusService/TaskDef/Resource"
   }
  },
  "WindowGeniusServiceTaskDefExecutionRole1589B117": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusService/TaskDef/ExecutionRole/Resource"
   }
  },
  "WindowGeniusServiceTaskDefExecutionRoleDefaultPolicy1E7FBE9C": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "WindowGeniusLogGroupAE032AE7",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "secretsmanager:GetSecretValue",
        "secretsmanager:DescribeSecret"
       ],
       "Effect": "Allow",
       "Resource": "arn:aws:secretsmanager:us-east-1:629965575535:secret:windowgeniusai-prod-zJRocM"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "WindowGeniusServiceTaskDefExecutionRoleDefaultPolicy1E7FBE9C",
    "Roles": [
     {
      "Ref": "WindowGeniusServiceTaskDefExecutionRole1589B117"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "WindowGeniusServiceEF3A6B4E": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "WindowGeniusCluster131ED853"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "windowgeniusai",
      "ContainerPort": 8000,
      "TargetGroupArn": {
       "Ref": "WindowGeniusServiceLBPublicListenerECSGroupBD615C78"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "ENABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "WindowGeniusServiceSecurityGroupA17A5F22",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "WindowGeniusVPCPublicSubnet1SubnetA800584E"
       },
       {
        "Ref": "WindowGeniusVPCPublicSubnet2Subnet5B9A29DF"
       }
      ]
     }
    },
    "PlatformVersion": "LATEST",
    "TaskDefinition": {
     "Ref": "WindowGeniusServiceTaskDefC3884F53"
    }
   },
   "DependsOn": [
    "WindowGeniusServiceLBPublicListenerECSGroupBD615C78",
    "WindowGeniusServiceLBPublicListenerF1C122F7",
    "WindowGeniusTaskRoleE5811045"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusService/Service/Service"
   }
  },
  "WindowGeniusServiceSecurityGroupA17A5F22": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "CdkWindowgeniusaiStack/WindowGeniusService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "WindowGeniusVPC5C5D1F59"
    }
   },
   "DependsOn": [
    "WindowGeniusTaskRoleE5811045"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusService/Service/SecurityGroup/Resource"
   }
  },
  "WindowGeniusServiceSecurityGroupfromCdkWindowgeniusaiStackWindowGeniusServiceLBSecurityGroup2CFD477D8000D9D2FA75": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "WindowGeniusServiceSecurityGroupA17A5F22",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "WindowGeniusServiceLBSecurityGroupE8EF7DCE",
      "GroupId"
     ]
    },
    "ToPort": 8000
   },
   "DependsOn": [
    "WindowGeniusTaskRoleE5811045"
   ],
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/WindowGeniusService/Service/SecurityGroup/from CdkWindowgeniusaiStackWindowGeniusServiceLBSecurityGroup2CFD477D:8000"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31Sy07DMBD8Fu6uKUVw7wNQJQRRi7iijbsNpqkd2euiKsq/s7GbNCqI047HY+/O2BM5Gd/J8RV8+5Ha7EalzmW9JlA7wdRHjWoi6/dKifnWvGdzkYW81GodcoPUcme0soHwDfISz/yZm3pvlQbS1vTiFjwss7a8AD0B4TccReb0geH54qUhdIw7QZrktJoSz/q5R0NijSo4TccnZ0MVZ/iXeCgcev+LXprINwKVl/W8DJ67t6oOPoIroHXldwvcaqM7T5eMNQTaoBtwp7NrdAetUk4JNkLDXtYrm9KLNbOcdLSbUCNKW/BMz7boHXW4EW7DWwsgyMHj0ngCwx1Sir18MRsSnZr9uxT1YtadbISPrN+DgQIdRxGDaoWpvLEXpEH+veByJ2b5UQG17+jltKrYTvwKzxY2MyjbhpuLbLAET1qVrMijQpviwH/x79MuhTFYD3WaH [...]
   },
   "Metadata": {
    "aws:cdk:path": "CdkWindowgeniusaiStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "WindowGeniusServiceLoadBalancerDNS6C67E404": {
   "Value": {
    "Fn::GetAtt": [
     "WindowGeniusServiceLBA50F66F8",
     "DNSName"
    ]
   }
  },
  "WindowGeniusServiceServiceURL7A614FD5": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "WindowGeniusServiceLBA50F66F8",
        "DNSName"
       ]
      }
     ]
    ]
   }
  },
  "LoadBalancerDNS": {
   "Description": "Public URL of the deployed WindowGeniusAI app",
   "Value": {
    "Fn::GetAtt": [
     "WindowGeniusServiceLBA50F66F8",
     "DNSName"
    ]
   },
   "Export": {
    "Name": "WindowGeniusALB"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
